--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,8 @@
         <!--<item name="otpViewStyle">@style/OtpWidget.OtpView</item>-->
     </style>
 
+    <!--AlertDialog SignOut-->
+    <style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+    </style>
+
 </resources>
