--- a/app/src/main/res/layout/lecture_fragment.xml
+++ b/app/src/main/res/layout/lecture_fragment.xml
@@ -2,17 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_home"
+    android:id="@+id/fragment_lecture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name ="com.codingschool.ui.home.HomeFragment"
-    tools:context=".ui.home.HomeFragment">
+    android:name ="com.codingschool.ui.lecture.LectureFragment"
+    tools:context=".ui.lecture.LectureFragment">
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_home"
+        android:text="@string/fragment_lecture"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
