--- a/app/src/main/res/layout/fragment_lecture_progress.xml
+++ b/app/src/main/res/layout/fragment_lecture_progress.xml
@@ -5,14 +5,14 @@
     android:id="@+id/fragment_lecture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name ="com.codingschool.ui.lecture.LectureFragment"
-    tools:context=".ui.lecture.LectureFragment">
+    android:name ="com.codingschool.ui.lecture.LectureProgressFragment"
+    tools:context=".ui.lecture.LectureProgressFragment">
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_lecture"
+        android:text="@string/fragment_lecture_progress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
